# corels

./: .gitignore  .travis.yml  .travis.yml.old  README.md
R/: .Rbuildignore  ChangeLog  DESCRIPTION  NAMESPACE  README.md  config.status  configure  configure.ac
R/R/: RcppExports.R
R/inst/: AUTHORS  LICENSE
R/inst/sample_data/: compas_test.csv  compas_train-binary.csv  compas_train.label  compas_train.out
R/man/: RcppCorels-package.Rd  corels.Rd
R/src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  wrapper.cpp
R/src/unused/: alloc.h  cache.h  corels.cpp  main.cc  pmap.cpp  pmap.h  queue.h  rule.h  rulelib.cpp  run.cpp  utils.cpp
data/: compas_test-binary.csv  compas_test.label  compas_test.out  compas_test.out.1  compas_train.csv  compas_train.minor
logs/: README.txt
processing/: compas.py  compas_binary.py  mine.py
pycorels/: README.md  pycorels.c  setup.py  utils.h
python/: MANIFEST.in  README.md  requirements.txt  setup.py
python/corels/: README.txt  __init__.py  _corels.cpp  _corels.pyx  corels.py  utils.py
python/examples/: basic.py  compas.py  scikit.py  toy.py
src/: GNUmakefile  alloc.h  alloc.hh  cache.cc  cache.cpp  cache.h  cache.hh  corels  corels.cc  corels.cpp  main.cc  main.cpp  params.c  params.h  pmap.cc  pmap.cpp  pmap.h  pmap.hh  queue.h  queue.hh  rule.h  rule.hh  rulelib.c  rulelib.cpp  run.cc  run.cpp  run.h  run.hh  tests.cc  time.cpp  time.hh  utils.cc  utils.cpp  utils.h  utils.hh
tests/: GNUmakefile  README.md  fixtures.h  tests-main.cpp  tests.cc  tests.cpp  tests.label  tests.minor  tests.out
(+25 files in other folders)
